@@ -135,6 +135,9 @@
 # broker, and delivered when the bridge reconnects.
 #cleansession false
 
+# Set the keepalive interval for this bridge connection, in seconds.
+#keepalive_interval 60
+
 # ======================================================================
 # Extensions
 # ======================================================================
